feat: upload user picture in S3
